syntax="proto3";

service DeviceMetrics {
  rpc AddDeviceMetrics(Device) returns (Empty);
}

message Empty {}

message Device {
  int32 id = 1;
  string name = 2;
  double latitude = 3;
  double longitude = 4;
  int32 temp_f = 5;
  Feed feed = 6;
}

message Feed {
  string template_id = 1;
  int32 device_id = 2;
  repeated FeedItem feed_items = 3;
}

message FeedItem {
  int64 ts = 1;
  double pm_25 = 2;
}
